[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]

[tool.setuptools.dynamic]
version = {attr = "lmconf.__version__"}

[project]
name = "lmconf"
authors = [{ name = "huaxlin", email = "huaxlin33@gmail.com" }]
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = ["version"]
requires-python = ">=3.8"

[project.urls]
Home = "https://github.com/huaxlin/lmconf"

[project.optional-dependencies]
test = [
  "pytest"
]
dev = [
  "black",
  "flake8",
  "isort",
  "mypy",
  "rich",
]
